enumcapsulate/tests/derive-tests/variant_downcast/fail/struct.err.txt
error: Only enums can use this derive
 --> /tests/derive-tests/variant_downcast/fail/struct.rs:4:12
  |
4 | pub struct Struct {
  |            ^^^^^^
